--- a/site_3/src/style/style-phone.css
+++ b/site_3/src/style/style-phone.css
@@ -18,11 +18,12 @@
 
 
 	#info > p {
-		width: 80%;
+		width: 86%;
 		margin: auto;
+		font-size: 1em;
 	}
 	#info > img {
-		top: 37%;
+		top: 30%;
 	}
 
 
